--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rightclicktool",
-  "version": "1.0.0",
+  "version": "1.0",
   "license": "MIT",
   "description": "丰富的右键单击工具",
   "main": "index.js",
@@ -17,11 +17,15 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/chrome": "^0.0.176",
     "rollup": "^2.65.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-typescript2": "^0.31.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   }
