feat: roollup 配置更新

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "丰富的右键单击工具",
   "main": "index.js",
   "scripts": {
+    "watch": "rollup --config --watch",
     "build": "rollup --config"
   },
   "keywords": [],
@@ -14,15 +15,18 @@
     "url": "https://github.com/findmio/RightClickTool.git"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/chrome": "^0.0.176",
+    "@types/lodash-es": "^4.17.5",
     "rollup": "^2.65.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
