--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "sourceMap": false,
     "rootDir": "src",
     "noEmitOnError": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": [
         "./src/*"
