--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,10 @@
     "scripts": ["js/background.js"],
     "persistent": false
   },
+  "browser_action": {
+    "default_icon": "images/icon@32.png",
+    "default_title": "不止右键",
+    "default_popup": "popup.html"
+  },
   "offline_enabled": false
 }
