--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "url": "https://github.com/findmio/RightClickTool.git"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "store2": "^2.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
@@ -33,9 +35,13 @@
     "@types/lodash-es": "^4.17.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
     "rollup": "^2.65.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tailwindcss": "^3.0.15",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   }
