--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,13 @@
         "modules": false
       }
     ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 3
+      }
+    ]
   ]
 }
