--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@babel/runtime-corejs3": "^7.16.8",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -42,6 +44,7 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.31.1",
     "tailwindcss": "^3.0.15",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
