--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "url": "https://github.com/findmio/RightClickTool.git"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "ahooks": "^3.1.8",
+    "antd": "^4.18.5",
     "classnames": "^2.3.1",
     "lodash-es": "^4.17.21",
+    "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "store2": "^2.13.1"
@@ -34,6 +37,7 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@tailwindcss/forms": "^0.4.0",
     "@types/chrome": "^0.0.176",
     "@types/lodash-es": "^4.17.5",
     "@types/react": "^17.0.38",
